chapter 4 exercises
